# FreewdKT

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/release/: app-release.apk  output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  security.cpp  security.h
app/src/main/res/drawable/: about.xml  agreement.xml  arrow_circle_right.xml  bg_comment_input.xml  deepseek.xml  ic_reply.xml  like.xml  liked.xml  mdicalendarcheck.xml  notifications.xml  send.xml
app/src/main/res/layout/: activity_create_post.xml  activity_freewd_browser.xml  activity_main.xml  activity_notification.xml  activity_picture_view.xml  activity_post_details.xml  activity_post_list.xml  activity_register.xml  activity_user_agreement.xml  content_post_list.xml  dialog_comment_bottom.xml  dialog_loading.xml  home_activity.xml  item_home_header.xml  item_loading_footer.xml  item_notification.xml  item_post.xml  item_reply.xml  item_zone.xml
app/src/main/res/mipmap-anydpi-v26/: icon.xml
app/src/main/res/values/: freewd_color.xml  ids.xml  (+4 more)
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko-rKR/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+43 files in other folders)
